# white_board

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  README.md  package-lock.json  package.json  spec.md  todo_list.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  db.py  frontend.py  main.py  schemas.py  settings.py
backend/tests/: test_healthz.py  test_project_page_api.py  test_static_serving.py
frontend/: eslint.config.js  index.html  package.json
frontend/src/: App.tsx  Canvas.test.ts  Canvas.tsx  HomeView.tsx  Inspector.test.tsx  Inspector.tsx  Toolbar.test.tsx  Toolbar.tsx  api.ts  appRoute.test.ts  appRoute.ts  boardHistory.test.ts  boardHistory.ts  canvasBackground.test.ts  canvasBackground.ts  canvasConstants.ts  canvasContextMenu.test.ts  canvasContextMenu.ts  canvasHelpers.test.ts  canvasHelpers.ts  canvasSyncHelpers.ts  canvasTypes.ts  index.css  itemStyles.test.ts  itemStyles.ts  magnet.test.ts  magnet.ts  markdownPreview.tsx  minimap.test.ts  minimap.ts  pagePngExport.test.ts  pagePngExport.tsx  pagePptxExport.test.ts  pagePptxExport.ts  pageTransfer.test.ts  pageTransfer.ts  pageViewport.test.ts  pageViewport.ts  projectImport.test.ts  projectImport.ts  (+20 more)
frontend/src/items/: ArrowConnector.tsx  BoardItemRenderer.test.tsx  BoardItemRenderer.tsx  Frame.test.tsx  Frame.tsx  Line.tsx  NotePaper.test.tsx  NotePaper.tsx  SegmentShape.tsx  StickyNote.tsx  Table.test.tsx  Table.tsx  TextBox.tsx
scripts/: backup.ps1  bootstrap.ps1  format.mjs  preflight.ps1  smoke.ps1
